# FLAG-Beamformer-Simulator-I

./: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  install_gb
autom4te.cache/: output.1  requests  traces.0  traces.1
m4/: xgpu.m4
scripts/: clean_ipc  clean_ipc.py  clean_ipc.sh  clean_sim  cleanup.sh  dmjd.py  run_scan  run_scan.sh  set_scan  set_scan.py  set_status  set_status.sh  test.py
src/: Makefile.am  Makefile.in  Pseudo_VEGASfits_template.txt  databuf_test.c  fake_gpu_frb_thread.c  fake_gpu_paf_thread.c  fake_gpu_psr_thread.c  fake_gpu_test_thread.c  fake_gpu_thread.c  fifo.c  fifo.h  fits_writer_thread.c  gpu_output_databuf.c  gpu_output_databuf.h  gpu_output_frb_databuf.c  gpu_output_frb_databuf.h  gpu_output_paf_databuf.c  gpu_output_paf_databuf.h  gpu_output_psr_databuf.c  gpu_output_psr_databuf.h  time_stuff.c  time_stuff.h
